--- a/src/App.scss
+++ b/src/App.scss
@@ -41,11 +41,11 @@ body{
   background: #555; 
 }
 @media screen and (min-width: 1280px) {
-
+display:none;
 }
 
 @media screen and (min-width: 1440px) {
-
+display:none;
 }
 
 
