--- a/src/styles/scan.scss
+++ b/src/styles/scan.scss
@@ -1,4 +1,160 @@
+.mobileresponsive {
+    display: none;
+}
+.txtcode {
+    text-align: center;
+    margin-left: 1rem;
+    font-size: 20px;
+    font-weight: 700;
+    color: #1c4e9a;
+}
+section {
+    margin-top: -10%!important;
+    padding-top: 50% !important;
+}
+.prblm {
+    margin-top: 1rem !important;
+    margin: 0 auto;
+}
+
+.prblm-btn {
+    font-size: 17px !important;
+    font-weight: 700 !important;
+    box-shadow: 0px 2px 7px #6c757d80;
+    border-radius: 21px !important;
+    padding: 14px 22px !important;
+}
+.location {
+    font-size: 16px !important;
+    font-weight: 700 !important;
+    margin-right: 3rem;
+    margin-left: -10rem !important;
+}
+.marmodal {
+    margin: 10px 15px;
+}
+.codeimg {
+    margin: 0 auto;
+}
+.changebtn-btn {
+    margin-left: -8rem !important;
+    border-radius: 1rem !important;
+}
+.info {
+    border-radius: 12px;
+    border: 2px solid lightgrey;
+    background-color: #d39e00a1;
+    margin: 24px 12px;
+    padding: 7px 13px;
+    font-size: 18px;
+    font-weight: 700;
+    transition: all 0.5s ease-in-out;
+    transform-origin: left top;
+}
+.linkscan{
+    text-decoration: none !important;
+}
+.pin {
+    margin-left: 10rem;
+}
+.digitpin {
+    width: fit-content !important;
+    margin: auto;
+}
+.Cancel-btn,
+.Proceed-btn {
+    border-radius: 10px;
+    padding: 8px 24px;
+    font-size: 18px;
+    font-weight: 700;
+}
+.Cancel-btn {
+    color: black;
+    background-color: white;
+    border: 2px solid #dee2e6;
+    box-shadow: 0px 1px 10px #c7c7c7;
+}
+.Proceed-btn {
+    border: 2px solid #1c4e9a;
+    float: right;
+    background: #1c4e9a !important;
+}
+.btn-btn {
+    margin: auto !important;
+}
+.blinking {
+    font-size: 20px;
+    animation: blinkingText 2s infinite;
+    font-weight: 700;
+    margin: 10px 0;
+    padding: 0 2rem;
+}
+@keyframes blinkingText {
+    0% {
+        color: rgb(175, 41, 41);
+    }
+    49% {
+        color: rgb(175, 41, 41);
+    }
+    60% {
+        color: transparent;
+    }
+    99% {
+        color: transparent;
+    }
+    100% {
+        color: rgb(175, 41, 41);
+    }
+}
+.secrow{
+    background-color: black;
+    margin-top: -1rem;
+    margin-bottom: 1rem;
+}
+@media screen and (max-width: 1440px) {
+    section {
+        background-color: black !important;
+        width: 83% !important;
+        margin-left: 6rem;
+        margin-top: -28%!important;
+        padding-top: 50% !important;
+    }
+    .secrow{
+        background-color: black;
+        margin-top: -1rem;
+        margin-bottom: 1rem;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    section {
+        background-color: black!important;
+        width: 83% !important;
+        margin-left: 6rem;
+        margin-top: -28%!important;
+        padding-top: 50% !important;
+    }
+    .secrow{
+        background-color: black;
+        margin-top: -1rem;
+        margin-bottom: 1rem;
+    }
+}
+
 @media screen and (max-width: 768px) {
+    section {
+        background-color: black !important;
+        width: 103% !important;
+        margin-left: -1rem;
+        margin-top: -41% !important;
+        padding-top: 79% !important;
+    }
+    .mobileresponsive {
+        display: block !important;
+    }
+    .webresponsive {
+        display: none;
+    }
     .qr-reader {
         margin: 0 10px;
     }
@@ -45,7 +201,7 @@
     }
     .blinking {
         font-size: 18px;
-        animation: blinkingText 1.2s infinite;
+        animation: blinkingText 2s infinite;
         font-weight: 700;
         margin: 10px 0;
         padding: 0 2rem;
@@ -68,7 +224,6 @@
         }
     }
 }
-
 @media only screen and (max-width: 320px) {
     .btns {
         margin-top: 1rem;
