--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,180 +1,211 @@
+:root {
+  --navcover-z-index: 99;
+  --sidenav-z-index: 100;
+}
+
+.side-nav {
+  position: relative;
+  overflow: hidden;
+}
+.side-nav:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #f8f9fa;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  border-right: 8px solid #1c4e9a;
+  opacity: 1;
+  -webkit-transform-origin: 100% 100%;
+  -ms-transform-origin: 100% 100%;
+  transform-origin: 100% 100%;
+
+  // -webkit-transform: skewX(30deg);
+  // -ms-transform: skewX(30deg);
+  // transform: skewX(30deg);
+}
+
+html,
+body {
+  background-size: cover;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+.nav-cover {
+  position: fixed;
+  z-index: var(--navcover-z-index);
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+}
+
+.side-nav {
+  position: absolute;
+  width: 42%;
+  overflow-x: hidden;
+  z-index: var(--sidenav-z-index);
+  top: 17px;
+  left: -16px;
+}
+
+.side-nav a {
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
+  color: black;
+}
+.side-nav-item {
+  font-size: 18px;
+  font-weight: bold;
+  padding: 18px;
+  border-bottom: 1px solid #c7c7c7;
+  border-top: 1px solid #c7c7c7;
+  display: block;
+  margin: 2% 7%;
+}
+.side-nav .close-nav {
+  position: absolute;
+  top: 16px;
+  right: 4rem;
+  font-size: 1.6rem;
+   cursor: pointer;
+}
+.side-nav .close-nav:hover {
+  color: rgb(224, 22, 22);
+}
+.site-wrapper {
+  transition: margin-left 0.5s;
+}
+
+.open-nav {
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+#overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+  cursor: pointer;
+}
+.navimg {
+  margin-left: 1px;
+  width: 23%;
+}
+.card-header {
+  display: flow-root !important;
+  margin: 1rem 0;
+  padding: 0;
+  border: none !important;
+  background: none;
+}
+.card {
+  border: none;
+  font-size: 18px;
+  font-weight: 700;
+  margin-left: 6rem !important;
+}
+.sign-out {
+  color: black;
+  padding: 10px;
+  margin-right: 4rem !important;
+  border: none !important;
+  background: none !important;
+  float: right;
+  font-size: 14px;
+}
+.user-head {
+  margin-right: -12rem;
+}
+.card-list {
+  display: flow-root !important;
+  width: 50%;
+  border-radius: 12px;
+  padding: 13px 8px;
+  margin: 0.5rem 0rem;
+  background-color: #c7c7c74d;
+  border: 2px solid #c7c7c74d;
+}
+.userimg {
+  width: 25%;
+}
+.nav-title {
+  font-size: 17px;
+  margin-left: 5px;
+}
+.nav-item {
+  display: initial;
+}
+.fa-arrow-circle-right {
+  top: 2rem;
+  margin-left: 5px;
+  position: absolute;
+  right: 10px;
+}
+.fa-sign-out {
+  font-size: 1.3rem;
+  margin-right: 5px;
+  color: #0062cc;
+}
+.logout {
+  cursor: pointer;
+  display: flex;
+}
+.headerIcon {
+  margin-left: 4rem;
+  width: 8%;
+}
+.cancelicon{
+  color:#0062cc;
+}
+.cancelicon:hover{
+  color:red;
+}
 @media only screen and (max-width: 768px) {
-  :root {
-    --navcover-z-index: 99;
-    --sidenav-z-index: 100;
-  }
-
-  .fa-shopping-cart {
-    float: right;
-    position: fixed;
-    left: 19rem;
-  }
   .side-nav {
-    height: 100%;
-    position: relative;
-    overflow: hidden;
-  }
-  .side-nav:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #f8f9fa;
-    border-top-right-radius: 1rem;
-    border-bottom-right-radius: 1rem;
-    border-right: 8px solid #1c4e9a;
-    opacity: 1;
-    -webkit-transform-origin: 100% 100%;
-    -ms-transform-origin: 100% 100%;
-    transform-origin: 100% 100%;
-
-    -webkit-transform: skewX(30deg);
-    -ms-transform: skewX(30deg);
-    transform: skewX(30deg);
-  }
-
-  html,
-  body {
-    background-size: cover;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-  }
-  .nav-cover {
-    position: fixed;
-    z-index: var(--navcover-z-index);
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-  }
-
-  .side-nav {
-    overflow-x: hidden;
-    z-index: var(--sidenav-z-index);
-    top: -23px;
-    left: -16px;
-  }
-
-  .side-nav a {
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: bold;
-    color: black;
-  }
-  .side-nav-item {
-    font-size: 18px;
-    font-weight: bold;
-    padding: 18px;
-    border-bottom: 1px solid #c7c7c7;
-    border-top: 1px solid #c7c7c7;
-    display: block;
-    margin: 2% 7%;
-  }
-  .side-nav .close-nav {
-    position: absolute;
-    top: 0;
-    right: 1rem;
-    font-size: 2.2rem;
-    color: red;
-  }
-  .side-nav .close-nav:hover {
-    color: red;
-  }
-  .site-wrapper {
-    transition: margin-left 0.5s;
-  }
-
-  .open-nav {
-    font-size: 1.2rem;
-    cursor: pointer;
-  }
-  #overlay {
-    position: fixed;
-    display: none;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 2;
-    cursor: pointer;
-  }
-  .navimg {
-    margin-left: 1px;
-    width: 23%;
-  }
-  .card-header {
-    margin: 1rem 0;
-    padding: 0;
-    border: none;
-    background: none;
-  }
-  .card {
-    font-size: 18px;
-    font-weight: 700;
-    margin-left: 2rem !important;
-  }
-  .sign-out {
-    color: black;
-    padding: 10px;
-    margin-right: 2rem;
-    border: none;
-    background: none;
-    float: right;
-    font-size: 14px;
-  }
-  .user-head {
-    margin-right: -12rem;
-  }
-  .card-list {
-    width: 38%;
-    border-radius: 12px;
-    padding: 13px 8px;
-    margin: 0.5rem 0rem;
-    background-color: #c7c7c74d;
-    border: 2px solid #c7c7c74d;
-  }
-  .userimg {
-    width: 25%;
+    width: 99%;
   }
   .nav-title {
-    font-size: 14px;
-    margin-left: 5px;
+    font-size: 16px;
   }
-  .nav-item {
-    display: initial;
+  .card {
+    margin-left: 3rem !important;
+  }
+  .card-list {
+    width: 53%;
+  }
+
+  .card-header {
+    padding: 0 !important;
   }
   .fa-arrow-circle-right {
-    margin-left: 5px;
-    position: absolute;
-    right: 10px;
-  }
-  .fa-sign-out {
-    margin-right: 5px;
-    color: #0062cc;
-  }
-  .logout {
-    display: flex;
-  }
+    top: 1rem;
+}
+.side-nav .close-nav {
+  top: 22px;
+  right: 5rem;
+  font-size: 1.1rem;
+
+}
 }
 
 @media only screen and (max-width: 480px) {
   .side-nav-item {
     font-size: 12px !important;
   }
-  .fa-shopping-cart {
-    left: 19rem;
-  }
 }
 
 @media only screen and (max-width: 320px) {
-  .fa-shopping-cart {
-    left: 16rem;
-  }
   .shoptxt {
     padding: 6px 21px !important;
     font-size: 18px !important;
