--- a/src/styles/scan.scss
+++ b/src/styles/scan.scss
@@ -75,9 +75,18 @@ section {
     box-shadow: 0px 1px 10px #c7c7c7;
 }
 .Proceed-btn {
+    color:white!important;
     border: 2px solid #1c4e9a;
     float: right;
     background: #1c4e9a !important;
+}
+.link-proceed{
+    color:white!important;
+}
+.Proceed-btn :hover{
+    color:white!important;
+    text-decoration: none;
+
 }
 .btn-btn {
     margin: auto !important;
@@ -164,6 +173,11 @@ section {
         padding: 8px 24px;
         font-size: 18px;
         font-weight: 700;
+        color:white !important;
+    }
+    .Proceed-bt:hover {
+        color:white !important;
+        text-decoration: none;
     }
     .Cancel-btn {
         color: black;
