--- a/src/styles/addcart.scss
+++ b/src/styles/addcart.scss
@@ -1,12 +1,11 @@
-
-.shopping-header{
+.shopping-header {
     border-bottom: 1px solid #c7c7c7;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
-.mrselect{
-    margin-left:1rem;
+.mrselect {
+    margin-left: 1rem;
 }
-.confirm{
+.confirm {
     // border: 2px solid lightgrey;
     border-bottom: 1px solid #c7c7c7;
     background-color: #e9ecefb3;
@@ -15,27 +14,27 @@
     font-size: 20px;
     font-weight: 700;
 }
-.cartt{
+.cartt {
     margin-left: 1rem;
     margin-top: 4rem;
     font-size: 27px;
     font-weight: 700;
-  
 }
-.summary{
+.summary {
     margin-top: 2rem;
     border: 3px solid lightgrey;
 }
-.cart-details{
+.cart-details {
     padding: 1rem 3rem;
 }
-.item-details{
+.item-details {
     font-size: 16px;
     font-weight: 600;
     background-color: #e9ecefb3;
-    // font-weight: 700; 
+    // font-weight: 700;
 }
-.minusbtn,.plusbtn{
+.minusbtn,
+.plusbtn {
     font-size: 22px;
     font-weight: 700;
     border: 2px solid lightgrey;
@@ -45,29 +44,29 @@
     background-color: lightslategrey;
     cursor: pointer;
 }
-.bg{
+.bg {
     padding: 2px 16px;
     background-color: white;
 }
-.status{
+.status {
     margin-top: 2rem;
     margin-left: 3rem;
 }
-.price{
-    font-weight: 700; 
+.price {
+    font-weight: 700;
 }
-.mar{
-    margin-right:1rem;
+.mar {
+    margin-right: 1rem;
 }
-.off{
-    color:red;
+.off {
+    color: red;
 }
-.summary{
+.summary {
     font-size: 16px;
     font-weight: 600;
     margin-left: -1.4rem;
 }
-.vocher{
+.vocher {
     padding: 0.5rem 2rem;
     margin-bottom: 1rem;
     background-color: lightgrey;
@@ -77,58 +76,56 @@
     font-size: 20px;
     margin-right: 2rem;
 }
-.fileicon{
+.fileicon {
     padding-left: 2rem;
     padding-top: 0rem;
 }
-.drive{
- 
+.drive {
     width: 13vh !important;
     height: 28vh !important;
-
 }
-.youcart{
+.youcart {
     margin-left: 2rem;
 }
-.item{
+.item {
     padding-left: 6rem;
     padding-top: 2rem;
 }
-.rating{
+.rating {
     padding: 0 3rem;
 }
-.ratingstar{
+.ratingstar {
     text-align: center;
     border-radius: 5px;
     background-color: #6c757d99;
 }
-.pdt{
+.pdt {
     padding-left: 1rem;
 }
-.rating-div{
+.rating-div {
     margin: 2rem 0rem;
 }
-.inc-dec-num{
+.inc-dec-num {
     font-size: 21px;
 }
-.order{
-padding:5px 30px;
+.order {
+    padding: 5px 30px;
 }
-.order-sum{
+.order-sum {
     font-size: 23px;
     font-weight: 700;
     margin-bottom: 1rem;
 }
-.pricelist{
+.pricelist {
     padding-left: 7rem;
 }
-.mb{
+.mb {
     margin-bottom: 1rem;
 }
-.orderbt{
+.orderbt {
     border-bottom: 2px solid lightgrey;
 }
-.save{
+.save {
     font-size: 19px;
     font-weight: 700;
     border-radius: 8px;
@@ -138,9 +135,9 @@ padding:5px 30px;
     padding: 0.8rem 2rem;
     background-color: #6c757da1;
 }
-.checkout{
+.checkout {
     cursor: pointer;
-    color:white;
+    color: white;
     font-size: 18px;
     font-weight: 700;
     border-radius: 8px;
@@ -151,19 +148,19 @@ padding:5px 30px;
     margin-left: 11rem;
     background-color: green;
 }
-.pp{
+.pp {
     font-size: 21px;
     font-weight: 700;
 }
-.view{
-    color:blue;
+.view {
+    color: blue;
     cursor: pointer;
 }
-.saved-details{
+.saved-details {
     margin-top: 2rem;
-    margin-left:1rem;
+    margin-left: 1rem;
 }
-.checkicon{
+.checkicon {
     color: white;
     margin-left: 7rem;
     position: absolute;
@@ -171,60 +168,60 @@ padding:5px 30px;
     top: -2.5rem;
     bottom: 3rem;
 }
-.deleteicon{
+.deleteicon {
     cursor: pointer;
 }
-.nexticon{
+.nexticon {
     margin-top: -0.3rem;
     margin-right: 4rem;
     margin-bottom: 10px;
 }
 /*************************MODAL STYLES**********/
 
-.deletemodal{
-    padding:1rem;
-    font-size:20px;
+.deletemodal {
+    padding: 1rem;
+    font-size: 20px;
     font-weight: 600;
-    margin:1rem 2rem;
+    margin: 1rem 2rem;
 }
-.remove{
-    color:red;
-    text-align:center;
-    margin:1rem 0rem;
+.remove {
+    color: red;
+    text-align: center;
+    margin: 1rem 0rem;
 }
-.remove-btn{
-    background-color:lightpink;
-    border:2px solid lightpink;
-    color:black;
+.remove-btn {
+    background-color: lightpink;
+    border: 2px solid lightpink;
+    color: black;
 }
-.remove-btn :hover{
-    background-color:red;
-    border:2px solid red;
-    color:black;
+.remove-btn :hover {
+    background-color: red;
+    border: 2px solid red;
+    color: black;
 }
-.del-cancel-btn{
-    background-color:rgb(155, 143, 145);
-    border:2px solid rgb(155, 143, 145);
+.del-cancel-btn {
+    background-color: rgb(155, 143, 145);
+    border: 2px solid rgb(155, 143, 145);
 }
-.del-cancel-btn:hover{
-    background-color:rgb(241, 234, 235);
-    border:2px solid rgb(241, 234, 235);
+.del-cancel-btn:hover {
+    background-color: rgb(241, 234, 235);
+    border: 2px solid rgb(241, 234, 235);
 }
-.mod-item-name{
-    text-align:center;
+.mod-item-name {
+    text-align: center;
 }
-.removebtns{
-    margin:2rem 0rem;
+.removebtns {
+    margin: 2rem 0rem;
 }
 .react-responsive-modal-modal {
     border-radius: 1rem !important;
 }
 
 @media screen and (max-width: 1440px) {
-.cart-details {
-    padding: 1.5rem 3rem;
-}
-.summary {
-    margin-top: 6rem;
-}
+    .cart-details {
+        padding: 1.5rem 3rem;
+    }
+    .summary {
+        margin-top: 6rem;
+    }
 }
