--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -9,28 +9,27 @@
     float: right;
     top: -1rem;
     left: 62.5rem;
-
 }
-.shopping-main{
+.shopping-main {
     background-color: #d3d3d329;
     border-radius: 9px;
     margin: 0 6rem;
-    margin-top:7rem;
+    margin-top: 7rem;
 }
 .headercartIcon {
     margin-left: 4rem;
     width: 15%;
 }
-.yourcartIcon{
-        padding-top: 3rem;
-        margin-left: 4rem;
-        width: 14%;
+.yourcartIcon {
+    padding-top: 3rem;
+    margin-left: 4rem;
+    width: 14%;
 }
-.emptycart{
-    width:35%;
+.emptycart {
+    width: 35%;
     margin-left: 18rem;
 }
-.continue-btn{
+.continue-btn {
     padding: 11px 26px;
     margin-left: 21rem;
     margin-bottom: 3rem;
@@ -40,14 +39,15 @@
     font-size: 20px;
     font-weight: 700;
 }
-.shop-cart{
-    padding-top:1rem;
+.shop-cart {
+    padding-top: 1rem;
     margin-left: 14rem;
     font-size: 2rem;
     font-weight: 700;
     margin-top: 0rem;
 }
-.addcartlink,.addcartlink:hover{
+.addcartlink,
+.addcartlink:hover {
     text-decoration: none !important;
-    color:white !important;
+    color: white !important;
 }
