--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -19,7 +19,7 @@
 
     .navigation .navbar {
         background-color: white !important;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         height: 12vh;
     }
 
@@ -203,3 +203,6 @@
         margin-left: -11%;
     }
 }
+
+
+
