--- a/src/styles/addcart.scss
+++ b/src/styles/addcart.scss
@@ -1,6 +1,21 @@
+
+// .overlay {
+//     position: fixed;
+//     display: none;
+//     width: 100%;
+//     height: 100%;
+//     top: 0;
+//     left: 0;
+//     right: 0;
+//     bottom: 0;
+//     background-color: rgba(0, 0, 0, 0.5);
+//     z-index: 1020;
+//     cursor: pointer;
+// }
+
 .shopping-header {
     border-bottom: 1px solid #c7c7c7;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 .mrselect {
     margin-left: 1rem;
@@ -21,6 +36,9 @@
     font-weight: 700;
 }
 .summary {
+    position: fixed;
+    right: 0;
+    top: 21px;
     margin-top: 2rem;
     border: 3px solid lightgrey;
 }
@@ -50,7 +68,7 @@
 }
 .status {
     margin-top: 2rem;
-    margin-left: 3rem;
+    margin-left: 6rem;
 }
 .price {
     font-weight: 700;
@@ -225,3 +243,16 @@
         margin-top: 6rem;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
