--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -150,13 +150,13 @@ body {
         margin-right: 1rem;
         font-size: 1.2rem !important;
     }
-    .headerIcon {
-        width: 25% !important;
-        margin-left: 1rem !important;
-    }
-    .menubar {
-        font-size: 1.2rem !important;
-    }
+    // .headerIcon {
+    //     width: 25% !important;
+    //     margin-left: 1rem !important;
+    // }
+    // .menubar {
+    //     font-size: 1.2rem !important;
+    // }
     .shopping-righticon {
         position: absolute;
         float: right;
@@ -174,7 +174,7 @@ body {
     .bannerimg2,
     .bannerimg3,
     .bannerimg4 {
-        width: auto !important;
+        width: 80vh !important;
         height: 39vh;
     }
     .carousel-center {
