--- a/src/styles/addcart.scss
+++ b/src/styles/addcart.scss
@@ -1,4 +1,3 @@
-
 // .overlay {
 //     position: fixed;
 //     display: none;
@@ -85,6 +84,7 @@
     margin-left: -1.4rem;
 }
 .vocher {
+    display: flex;
     padding: 0.5rem 2rem;
     margin-bottom: 1rem;
     background-color: lightgrey;
@@ -118,6 +118,7 @@
     background-color: #6c757d99;
 }
 .pdt {
+ padding-top: 13px;
     padding-left: 1rem;
 }
 .rating-div {
@@ -134,15 +135,19 @@
     font-weight: 700;
     margin-bottom: 1rem;
 }
+.orderbt {
+    display: flex;
+    margin-left: 28px;
+    border-bottom: 2px solid lightgrey;
+}
+
 .pricelist {
     padding-left: 7rem;
 }
 .mb {
     margin-bottom: 1rem;
 }
-.orderbt {
-    border-bottom: 2px solid lightgrey;
-}
+
 .save {
     font-size: 19px;
     font-weight: 700;
@@ -235,6 +240,23 @@
     border-radius: 1rem !important;
 }
 
+.addbookoSum {
+    background-color: #e9ecef;
+    margin: 12px 8px;
+    padding: 7px 12px;
+    font-weight: 700;
+    justify-content: space-between;
+    box-shadow: 0 4px 8px 0 #00000033; /* font-size: 18px; */
+    border-radius: 4px;
+}
+.addorder-details-list {
+    font-size: 15px;
+    margin-top: 3rem;
+    font-weight: 700;
+}
+.cartlisted {
+    margin-left: 4rem;
+}
 @media screen and (max-width: 1440px) {
     .cart-details {
         padding: 1.5rem 3rem;
@@ -243,16 +265,114 @@
         margin-top: 6rem;
     }
 }
+.youremptycart {
+    color: #6c757de8;
+    font-weight: 600;
+    font-size: 28px;
+    padding-top: 5rem;
+    text-align: center;
+}
+@media screen and (max-width: 768px) {
+    .summary {
+        position: initial;
+        margin-left: 26px;
+     
+        width: 88%;
+    
+    }
+    .infocircle{
+            top: 1rem;
+    position: relative;
+    }
+    .drive{
+        top: 1rem;
+        position: relative;
+    }
+    .yourcart-head {
+        display: none;
+    }
+    .cartt {
+        margin-left: 2rem;
+        margin-top: 1rem;
+    }
+    .cart-details {
+        padding: 0rem;
+    }
+    .radiomargin {
+        display: flex;
+    }
+    .confirm {
+        width: 83%;
+        padding: 8px 0px;
+    }
+    .pdt {
+        padding-left: 2rem;
+        margin-left: 0rem;
+        margin-top: -2rem;
+    }
+    .addbookoSum {
+        background-color: #e9ecef;
+        margin: 12px 8px;
+        padding: 7px 12px;
+        font-weight: 700;
+        /* font-size: 18px; */
+        border-radius: 4px;
+    }
+    .drive {
+        width: 10vh !important;
+        height: 7vh !important;
+    }
+    .addbookoSum {
+        margin: 12px 34px;
+        padding: 13px 2px;
+    }
+    .addorder-details-list {
+        font-size: 15px;
+        margin-top: 3rem;
+        font-weight: 700;
+    }
+    .cartlisted {
+        margin-left: 4rem;
+    }
+    .status {
+        margin-top: 2rem;
+        margin-left: 1rem;
+    }
+    .multiplecart {
+        display: none;
+    }
+    .save {
+        margin-right: 1rem;
+        margin-left: 0rem;
+        padding: 0.8rem 2.4rem;
+    }
+    .nexticon {
+        margin-right: 0rem !important;
+    }
+    .saved-details {
+        margin-left: 0rem;
+    }
+    .checkout {
+        margin-left: 7.5rem;
+    }
+    .vocher {
+      margin-left: 0rem; 
+     
+     margin-right: 2rem;
+    }
+    .order {
+        padding: 5px 0px;
+    }
+    .colcart{
+        padding-left: 41px;
+    }
+}
+@media screen and (min-width: 320px){
+    .confirm {
+        margin: 0px 37px !important;
+    }
+}
 
 
-
-
-
-
-
-
-
-
-
-
-
+// Routing?UserId=1164&UserType=Department&UserRole=Admin&Routingtype=Admin&BranchId=15&BranchName=Hosur-Hotel
+// bar/Routing?UserId=1164&UserType=Department&UserRole=Admin&Routingtype=Admin&BranchId=15&BranchName=Hosur-Hotel
